# eztils

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: README.md
eztils/: __init__.py  argparser.py  conco.py  dict_operations.py  extract_json.py  ezlogging.py  logger.py  oai_client.py  run_parallel.py  run_parallel_os_system.py  serialization.py
eztils/default/: __init__.py  dict_operations.py  ezlogging.py  itertools.py  logging.py  math.py  run_parallel.py  serialization.py  structures.py  typing_validator.py
eztils/git/: __init__.py
eztils/persistence/: hf.py
eztils/stats/: poisson_binomial.py
eztils/torch/: __init__.py  distributions.py  lightning.py  math.py  modules.py  observable.py  parameters.py  tensor_creators.py  to.py  wandb.py
eztils/torch/utils/: __init__.py  arrays.py
eztils/typer/: __init__.py
eztils/utils/: __init__.py  arrays.py  logging.py  model_wrappers.py  structures.py
scripts/depviz/: generate_dependency_tree.py  generate_dependency_tree_fn_level.py
tests/: test_basic.py  test_example.py  test_generate_dependency_tree_fn_level.py  test_git.py  test_logger.py
tests/torch/: test_ezitertools.py  test_ezlogging.py
